# ECE1747

./: .gitignore  README.md
A1/: CMakeLists.txt  ECE1747A1_report.docx  README.md  build.sh  perf.sh  plot_mode3.py  test.sh
A1/data/: small.csv
A1/include/: charge_points.h  computation.h  data_loader.h  data_processor.h  global.h  helper.h  log.h  parallel.h  particles.h
A1/results_mode_3/: 10000_3.out  1000_3.out  100_3.out  50000_3.out  5000_3.out  500_3.out  time_100.txt  time_1000.txt  time_10000.txt  time_100000.txt  time_1000000.txt  time_500.txt  time_5000.txt  time_50000.txt  time_500000.txt
A1/src/: A1.cpp  charge_points.cpp  computation.cpp  data_loader.cpp  data_processor.cpp  helper.cpp  log.cpp  parallel.cpp
A2/: implementation.cu
